--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["numbergazing <manoahbernier@gmail.com>"]
 python = "^3.10"
 requests = "^2.27.1"
 beautifulsoup4 = "^4.11.1"
+pytest = "^7.1.2"
 
 [tool.poetry.dev-dependencies]
 
