--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,34 @@
 [tool.poetry]
 name = "theotex"
-version = "0.1.0"
-description = ""
+version = "1.0.0"
+urls = { homepage = "https://github.com/numbergazing/theotex", bugtracker = "https://github.com/numbergazing/Theotex/issues" }
+description = "A python package to get Bible verses from https://theotex.org"
 authors = ["numbergazing <manoahbernier@gmail.com>"]
+readme = "README.md"
+license = "LICENSE"
+classifiers = [
+    "Programming Language :: Python :: 3.10",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Development Status :: 5 - Production/Stable",
+    "Environment :: Console",
+    "Natural Language :: English",
+    "Natural Language :: French"
+]
+keywords = [
+    "theotex", "bible", "septuagint", "new", "testament", "reader",
+    "septante", "nouveau", "testament", "lecteur"
+]
+scripts = { theotex = "theotex.__main__" }
 
 [tool.poetry.dependencies]
 python = "^3.10"
 requests = "^2.27.1"
 beautifulsoup4 = "^4.11.1"
-pytest = "^7.1.2"
 click = "^8.1.3"
 
 [tool.poetry.dev-dependencies]
+pytest = "^7.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
